# claude-workflow

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.claude/commands/: amend-plan.md  prime-cwf-dev.md  prime-planning-commands.md  write-plan.md
.claude/skills/writing-conformant-specs/: SKILL.md
.constitution/: cwf-principles.md  rfc-2119.md  testing.md
.constitution-examples/: testing.md
.constitution/principles/: software-engineering.md
.constitution/tools/: ruff.md
commands/: amend-plan.md  brainstorm.md  create-claude-md.md  implement-plan.md  read-constitution.md  write-plan.md
data/.claude/commands/: amend-plan.md  implement-plan.md  prime-planning-commands.md  read-constitution.md  write-plan.md
data/.constitution/: README.md  python-standards.md  testing.md  workflow.md
docs/: alternatives.md  backlog.md  commands-reference.md  concepts.md  cwf-concepts.md  design-principles.md  future-phases.md  noncc-alternatives.md  roadmap.md  workflow-guide.md
docs/examples/: redis-queue-plan.md  redis-queue-tasklist.md
examples/: example-calculator-plan.md  example-calculator-tasklist.md
hooks/: .gitkeep
skills/cfw-planning/: SKILL.md  metadata.json
skills/python-development/: SKILL.md  metadata.json
skills/read-constitution/: SKILL.md
skills/software-development/: SKILL.md  metadata.json
skills/testing-conventions/: SKILL.md  metadata.json
src/claude_workflow/: cli.py  config.py  fetcher.py  installer.py  utils.py
templates/: CLAUDE.md
(+28 files in other folders)
